examples/good/11-return-value.tx
fun test(): Int {
  return 1;
}

fun main(): Void {
  printInt(test());
  
  return;
}