examples/bad/01-divide.tx
fun illegalFun(x: Int): Int {
    return x / 0;
}

fun main(): Void {
    illegalFun(2);
    return;
}